# native_mediacodec_test

./: README.md  build.gradle  local.properties
app/src/main/cpp/: GPU_codec_api.h  native-codec-jni.cpp
app/src/main/res/layout/: main.xml
app_c/src/main/cpp/: GPU_codec_api.h  codec_api.h  main_video.cpp
app_cplus/: build.gradle
app_cplus/src/main/: AndroidManifest.xml
app_cplus/src/main/cpp/: CMakeLists.txt  main_video.cpp
app_cplus/src/main/java/com/example/nativecodec/: NativeCodec.java
